# sitesniper

./: .gitignore  log.txt  project.md  pyproject.toml
.cursor/: rules.md
docs/: designdecisions.md
docs/plans/: 2025-03-06-cli-skeleton.md
src/sitesniper/: __init__.py  main.py  screenshot.py  ui.py
tests/: test_ui.py
