[project]
name = "sitesniper"
version = "0.1.0"
description = ""
authors = [
    {name = "Jimmi bram",email = "jb@aiklar.dk"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright",
    "prompt_toolkit",
    "rich",
    "rich-pixels",
]

[tool.poetry]
packages = [{include = "sitesniper", from = "src"}]

[tool.poetry.scripts]
sniper = "sitesniper.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
